--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   }
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
+  .big-margin {margin-bottom: 400px;}
   .bg-1 { 
     background-color: #1abc9c; /* Green */
     color: #ffffff;
@@ -69,6 +70,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2">
      <h1>Thank you for supporting my Master's thesis! 🎉</h1>
+     <!-- Diesen Satz anpassen mit researching ist nicht so schön-->
         <p class="margin">I am studying computer science and researching how spending time in a <strong>virtual forest (VR forest)</strong> affects different groups of people. Your participation is incredibly valuable, and I truly appreciate it! 💙</p>
         
         <h2>What You Need</h2>
@@ -141,7 +143,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Thank you for supporting me :)</p> 
+  <p class="big-margin">Thank you for supporting me :)  </p> 
 </footer>
 
 </body>
