add developer mode yotube tutorial link

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         
         <h3>1️⃣ Install & Test the App</h3>
         <p>📥 Install this <strong><a href="#" target="_blank">.apk file</a></strong> on your Quest and briefly test if it starts. Then close it immediately.</p>
-        <p class="margin">If you are unsure how to do this, here is a <a href="https://www.youtube.com/watch?v=zzizceAOW-w" target="_blank">YouTube tutorial</a>.</p>
+        <p>If you are unsure how to do this, here is a <a href="https://www.youtube.com/watch?v=zzizceAOW-w" target="_blank">YouTube tutorial</a>.</p>
+        <p class="margin">Don't forget to enable <strong>Developer Mode</strong> on your Quest beforehand. If you don't know how to do this, here is a <a href="https://www.youtube.com/watch?v=QPInS5xxF-0" target="_blank">YouTube tutorial</a>.</p>
         
         <h3>2️⃣ Complete the Initial Survey</h3>
         <p class="margin">📋 Open this <a href="https://limesurvey.aau.at/index.php/497327?lang=en" target="_blank">survey link</a> and answer the questions.</p>
