Add dev mode info in text

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
         
         <h3>1️⃣ App installieren & kurz testen</h3>
         <p>📥 Installiere diese <strong><a href="#" target="_blank">.apk Datei</a></strong> auf deiner Quest und teste kurz, ob sie startet. Danach sofort wieder schließen.</p>
-        <p class="margin">Falls du nicht weißt, wie das geht – hier ist eine <a href="https://www.youtube.com/watch?v=E10Z9xwlLEY" target="_blank">YouTube-Anleitung</a>.</p>
+        <p>Falls du nicht weißt, wie das geht – hier ist eine <a href="https://www.youtube.com/watch?v=E10Z9xwlLEY" target="_blank">YouTube-Anleitung</a>.</p>
+        <p class="margin">Vergiss nicht den <strong>Developer Mode</strong> auf deiner zu aktivieren. Wie das geht wird ebenfalls in dem verlinktem Video erklärt.</p>
         
         <h3>2️⃣ Erste Umfrage ausfüllen</h3>
         <p class="margin">📋 Öffne diesen <a href="https://limesurvey.aau.at/index.php/497327?lang=de" target="_blank">Link zur Umfrage</a> und beantworte die Fragen.</p>
