change URL color after being clicked

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         a:hover {
             text-decoration: underline;
         }
+        a:active {
+          color: #1f6a9c;
+        }
       
   </style>
 </head>
