--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         
         <h2>What You Need</h2>
         <p>👉 A <strong>VR headset</strong> (Meta Quest 2 or newer)</p>
-        <p>👉 A <strong>PC</strong></p>
+        <p>👉 A <strong>PC / Laptop</strong></p>
         <p>👉 The <strong><a href="https://sidequestvr.com/setup-howto" target="_blank">SideQuest App</a></strong> (Advanced Installer)</p>
         <p>👉 A <strong>Meta developer account</strong> (create<a href="https://developers.meta.com/horizon/authenticate/?redirect_uri=https%3A%2F%2Fdeveloper.oculus.com%2Fmanage%2Forganizations%2Fcreate%2F" target="_blank"> here</a>)</p>
         <p class="margin">👉 The <strong>Meta Oculus App</strong> on your smartphone to enable developer mode</p>
@@ -117,7 +117,7 @@
         
         <h2>Was du brauchst</h2>
         <p>👉 Ein <strong>VR Headset</strong> (Meta Quest 2 oder neuer)</p>
-        <p>👉 Einen <strong>PC</strong></p>
+        <p>👉 Einen <strong>PC / Laptop</strong></p>
         <p>👉 Die <strong> <a href="https://sidequestvr.com/setup-howto" target="_blank">SideQuest App</a></strong> (Advanced Installer)</p>
         <p>👉 Einen <strong>Meta Entwickleraccount</strong> (<a href="https://developers.meta.com/horizon/authenticate/?redirect_uri=https%3A%2F%2Fdeveloper.oculus.com%2Fmanage%2Forganizations%2Fcreate%2F" target="_blank">hier</a> erstellen)</p>
         <p class="margin">👉 Die <strong>Meta Oculus App</strong> auf dem Smartphone, um den Entwicklermodus zu aktivieren</p>
