change URL hover color

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         }
         a:hover {
             text-decoration: underline;
+            color: #7b0e99;
         }
         a:active {
           color: #1f6a9c;
