add arrow to headline

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
      <h3>Hi!</h3>
-     <p><strong>German version below / Deutscher Text ist unten ⬇️</strong></p>
+     <p><strong>⬇️ German version below / Deutscher Text ist unten ⬇️</strong></p>
 </div>
 
 <!-- Second Container -->
