Rephrasing initial instruction & description of the project

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <div class="container-fluid bg-2">
     <h1>Thank you for supporting my Master's thesis! 🎉</h1>
     <!-- Diesen Satz anpassen mit researching ist nicht so schön-->
-    <p class="margin">I am studying computer science and researching how spending time in a <strong>virtual forest (VR forest)</strong> affects different groups of people. Your participation is incredibly valuable, and I truly appreciate it! 💙</p>
+    <p class="margin">As part of my computer science studies, I am researching how spending time in a <strong>virtual forest (VR forest)</strong> impacts different groups of people. Your participation is highly valuable, and I sincerely appreciate it!</p>
     
     <h2>What You Need</h2>
     <p>👉 A <strong>VR headset</strong> (Meta Quest 2 or newer)</p>
@@ -153,7 +153,8 @@
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3">    
   <h1>Vielen Dank, dass du mich bei meiner Masterarbeit unterstützt! 🎉</h1>
-  <p class="margin">Ich studiere Informatik und untersuche, wie sich ein Aufenthalt in einem <strong>virtuellen Wald (VR-Wald)</strong> auf verschiedene Menschengruppen auswirkt. Deine Teilnahme hilft mir enorm weiter, und ich freue mich sehr, dass du dabei bist! 💙</p>
+  <p class="margin">Im Rahmen meines Informatikstudiums erforsche ich, wie sich ein Aufenthalt in einem <strong>virtuellen Wald (VR-Wald)</strong> auf verschiedene Gruppen von Menschen auswirkt. Deine Teilnahme hilft mir enorm weiter - vielen Dank dafür!</p>
+
   
   <h2>Was du brauchst</h2>
   <p>👉 Ein <strong>VR-Headset</strong> (Meta Quest 2 oder neuer)</p>
