Add Audio Output info

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <p class="margin">📋 Open this <a href="https://limesurvey.aau.at/index.php/497327?lang=en" target="_blank">survey link</a> and answer the questions.</p>
     
     <h3 id="stepVR-en">3️⃣ Immerse Yourself in the VR Forest 🌲</h3>
-    <p>🕶️ Put on your headset, open the VR Forest app via PCVR, and try out the different <strong>movement methods</strong>.</p>
+    <p>🕶️ Put on your headset, open the VR Forest app via PCVR, and try out the different <strong>movement methods</strong>. Also make sure that your VR headset is selected as the audio output.</p>
     <p>💡 <strong>Tip:</strong> If you tend to get motion sickness, the <strong>hand up-and-down movement with the controllers</strong> is the best option for you.</p>
     <p class="margin">🚶‍♂️ Feel free to explore the VR world – once the time is up, return here.</p>
     
@@ -190,7 +190,7 @@
   <p class="margin">📋 Öffne diesen <a href="https://limesurvey.aau.at/index.php/497327?lang=de" target="_blank">Link zur Umfrage</a> und beantworte die Fragen.</p>
   
   <h3 id="stepVR-de">3️⃣ Eintauchen in den VR-Wald 🌲</h3>
-  <p>🕶️ Setze dein Headset auf, öffne die VR-Wald-App über PCVR und probiere die verschiedenen <strong>Bewegungsmethoden</strong> aus.</p>
+  <p>🕶️ Setze dein Headset auf, öffne die VR-Wald-App über PCVR und probiere die verschiedenen <strong>Bewegungsmethoden</strong> aus. Stelle außerdem sicher, dass dein VR-Headset als Audio-Ausgabe ausgewählt ist.</p>
   <p>💡 <strong>Tipp:</strong> Wenn dir leicht übel wird, ist die <strong>Hand-Auf-und-Ab-Bewegung mit den Controllern</strong> die beste Option für dich.</p>
   <p class="margin">🚶‍♂️ Erkunde die virtuelle Welt in Ruhe – wenn die Zeit abgelaufen ist, komm bitte hierher zurück.</p>
 
