change color schema

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   }
   .bg-3 { 
     background-color: #ffffff; /* White */
-    color: #555555;
+    color: #757575;
   }
   .bg-4 { 
     background-color: #2f2f2f; /* Black Gray */
@@ -49,7 +49,7 @@
             border-radius: 5px;
   }
   a {
-            color: #3498db;
+            color: #52a6dd;
             text-decoration: none;
             font-weight: bold;
         }
@@ -58,7 +58,7 @@
             color: #7b0e99;
         }
         a:active {
-          color: #1f6a9c;
+          color: #3e7fa9;
         }
       
   </style>
