change color for better readability

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         }
         a:hover {
             text-decoration: underline;
-            color: #7b0e99;
+            color: #d585ec;
         }
         a:active {
-          color: #3e7fa9;
+          color: #7b0e99;
         }
       
   </style>
