Change color for visited links

--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
             text-decoration: none;
             font-weight: bold;
         }
-        a:hover {
+  a:hover {
             text-decoration: underline;
             color: #d585ec;
         }
-        a:active {
+  a:active {
+          color: #d585ec;
+        }
+  a:visited {
           color: #7b0e99;
         }
       
