Add border around short overview

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
     padding-top: 70px;
     padding-bottom: 70px;
   }
+  ol, li {
+  font-size: 16px;
+  }
+
+.list-box {
+  border: 2px solid rgb(130, 6, 6);   /* rote, nicht ausgefüllte Linie */
+  border-radius: 10px;     /* abgerundete Ecken */
+  padding: 15px;           /* Innenabstand, damit die Liste nicht an der Linie klebt */
+  margin: 0 20px;          /* Abstand nach oben/unten */
+}
    .highlight {
             background: #dff0d8;
             padding: 5px;
@@ -78,15 +88,16 @@
 <div class="container-fluid bg-2">
   <h1>Thank you for supporting my Master's thesis! 🎉</h1>
   <!-- Diesen Satz anpassen mit researching ist nicht so schön-->
-  <p class="margin">As part of my computer science studies, I am researching how spending time in a <strong>virtual forest (VR forest)</strong> impacts different groups of people. Your participation is highly valuable, and I sincerely appreciate it!<br>
-    The process is simple and consists of three main steps:
+  <p class="margin">As part of my computer science studies, I am researching how spending time in a <strong>virtual forest (VR forest)</strong> impacts different groups of people. Your participation is highly valuable, and I sincerely appreciate it!</p>
+  <div class="list-box">
+     The process is simple and consists of three main steps:
     <ol>
       <li>Complete the Initial Survey – Answer a short questionnaire <strong>before</strong> the VR experience.</li>
       <li>Immerse Yourself in the VR Forest – Explore the virtual forest environment.</li>
       <li>Complete the Final Survey – <strong>After</strong> the VR session, fill out a second questionnaire.</li>
     </ol>
-  </p>
-    
+  </div>
+     
   <h2>What You Need</h2>
   <p>👉 A <strong>VR headset</strong> (Meta Quest 2 or newer)</p>
   <p>👉 A <strong>Windows PC / Laptop</strong> that meets <a href="https://www.meta.com/help/quest/articles/headsets-and-accessories/oculus-link/oculus-link-compatibility/" target="_blank">Oculus Link requirements</a></p>
@@ -163,15 +174,15 @@
 <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3">    
 <h1>Vielen Dank, dass du mich bei meiner Masterarbeit unterstützt! 🎉</h1>
-<p class="margin">Im Rahmen meines Informatikstudiums erforsche ich, wie sich ein Aufenthalt in einem <strong>virtuellen Wald (VR-Wald)</strong> auf verschiedene Gruppen von Menschen auswirkt. Deine Teilnahme hilft mir enorm weiter - vielen Dank dafür!<br>
+<p class="margin">Im Rahmen meines Informatikstudiums erforsche ich, wie sich ein Aufenthalt in einem <strong>virtuellen Wald (VR-Wald)</strong> auf verschiedene Gruppen von Menschen auswirkt. Deine Teilnahme hilft mir enorm weiter - vielen Dank dafür!</p>
+<div class="list-box">
   Der Ablauf ist einfach und umfasst drei Hauptschritte: 
   <ol>
     <li>Den ersten Fragebogen ausfüllen – Beantworte einen kurzen Fragebogen <strong>vor</strong> der VR-Erfahrung.</li>
     <li>Eintauchen in den VR-Wald – Erkunde die virtuelle Waldumgebung.</li>
     <li>Den zweiten Fragebogen ausfüllen – Fülle <strong>nach</strong> der VR-Session einen weiteren Fragebogen aus.</li>
   </ol>
-</p>
-
+</div>
 
 <h2>Was du brauchst</h2>
 <p>👉 Ein <strong>VR-Headset</strong> (Meta Quest 2 oder neuer)</p>
