--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
   border: 2px solid rgb(130, 6, 6);   /* rote, nicht ausgefüllte Linie */
   border-radius: 10px;     /* abgerundete Ecken */
   padding: 15px;           /* Innenabstand, damit die Liste nicht an der Linie klebt */
-  margin: 0 45px;          /* Abstand nach oben/unten */
+  margin: 0 20px;
+  margin-bottom: 45px;         
 }
    .highlight {
             background: #dff0d8;
